--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/goit-js-hw-09/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/goit-js-hw-09/assets/favicon-B_SY1GJM.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>goit-js-hw-09</title>
     <link rel="stylesheet" crossorigin href="/goit-js-hw-09/assets/styles-CFrPtiMb.css">
   </head>
   <body>
     <ul>
-      <li><a href="./1-gallery.html">Gallery</a></li>
-      <li><a href="./2-form.html">Form</a></li>
+      <li><a href="/goit-js-hw-09/1-gallery.html">Gallery</a></li>
+      <li><a href="/goit-js-hw-09/2-form.html">Form</a></li>
     </ul>
   </body>
 </html>
